<resources>
    <string name="app_name">First Responder App</string>
    <string name="app_package" translatable="false">com.aurel.ecorescue</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">MapsKey</string>
    <string name="google_maps_key_web" templateMergeStrategy="preserve" translatable="false">MapsKeyWeb</string>
    <string name="emergency_broadcast" translatable="false">de.ecorescue.emergency</string>
    <string name="parse_app_id" translatable="false">ParseAppId</string>
    <string name="server_url" translatable="false">ParseServerURL</string>
    <string name="client_key" translatable="false">ParseClientKey</string>
    <string name="gcm_sender_ID" translatable="false">gcm_sender_ID</string>
    <string name="gcm_sender" translatable="false">id:gcm_sender_ID</string>
    <string name="continue_button">Continue</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hint_number">No.</string>
    <string name="back_button">Back</string>
    <string name="please_wait">Please wait</string>
    <string name="error">Error</string>
    <string name="in_progress">in progress</string>
    <string name="fingerprint_activated">Please authenticate with your fingerprint now.</string>
    <string name="drawer_header_status">Status: </string>
    <string name="drawer_home">Home Page</string>
    <string name="drawer_map">AED Map</string>
    <string name="drawer_news">News</string>
    <string name="drawer_courses">Courses</string>
    <string name="drawer_account">Account</string>
    <string name="drawer_account_profile">Profile</string>
    <string name="drawer_account_settings">Settings</string>
    <string name="drawer_account_standby">Standby Mode</string>
    <string name="drawer_about">About the app</string>
    <string name="drawer_about_faq">FAQ</string>
    <string name="drawer_about_contact">Contact &amp; Imprint</string>
    <string name="drawer_about_legal">Legal notice</string>
    <string name="drawer_login">Login</string>
    <string name="profile">Profile</string>
    <string name="statistic_title">Summary: missions</string>
    <string name="emergency_state_accepted">Accepted</string>
    <string name="emergency_state_location">Arrived at location</string>
    <string name="emergency_state_canceled">Canceled</string>
    <string name="emergency_state_report_finished">Finished</string>
    <string name="map_menu_filter" translatable="false">Filter</string>
    <string name="map_filter_title" translatable="false">Filter</string>
    <string name="map_filter_hospital">Hospital</string>
    <string name="map_filter_pharmacy">Pharmacy</string>
    <string name="map_filter_defibrilator">AED</string>
    <string name="map_filter_fire">Fire department</string>
    <string name="map_filter_doctor">Doctor</string>
    <string name="map_filter_dentist">Dentist</string>
    <string name="emergency">Emergency</string>
    <string name="emergency_location">Emergency Location</string>
    <string name="title_emergency">Emergency</string>
    <string name="emergency_tab_info">Info</string>
    <string name="emergency_tab_map">Map</string>
    <string name="adress_label">Address</string>
    <string name="patient_label">Patient Name</string>
    <string name="info_label">Description</string>
    <string name="emergencyid_label">Emergency Number</string>
    <string name="emergency_accept">Accept</string>
    <string name="emergency_accepted">Emergency accepted</string>
    <string name="emergency_finished">Emergency finished</string>
    <string name="emergency_accept_new">Accept Emergency</string>
    <string name="emergency_cancel">Cancel Emergency</string>
    <string name="emergency_finish">Finish Emergency</string>
    <string name="emergency_finished_report">Write report</string>
    <string name="emergency_finish_info">Do you wish to cancel or finish the emergency?</string>
    <string name="emergency_finish_finish">Finish Emergency</string>
    <string name="no_missing_reports">There are currently no reports that need to be filled out.</string>
    <string name="call_controlcenter">Call Control Center</string>
    <string name="timeline">Timeline</string>
    <string name="timeline_recieved">Emergency recieved: %1s</string>
    <string name="timeline_created">Emergency created: %1s</string>
    <string name="timeline_ready">Ready for emergency: %1s</string>
    <string name="timeline_accepted">Emergency accepted: %1s</string>
    <string name="timeline_arrived">Arrived at location: %1s</string>
    <string name="timeline_finished">Emergency finished: %1s</string>
    <string name="timeline_canceld">Emergency canceled: %1s</string>
    <string name="dialog_rdy_title">Emergency Alert</string>
    <string name="dialog_rdy_info">Are you ready to assist in this emergency mission?</string>
    <string name="notification_emergency_info">An emergency occured around.</string>
    <string name="app_is_running_in_background_title">Background process started</string>
    <string name="app_is_running_in_background_content">Connection to the virtual dispatch center established.</string>
    <string name="notification_cancel_title">Emergency cancelled</string>
    <string name="notification_cancel_message">Your current emergency was cancelled.</string>
    <string name="emergency_cancelled_info">The emergency was cancelled by the control center.</string>
    <string name="dialog_rdy_Accept">I am ready to help!</string>
    <string name="dialog_rdy_timeAvailable">%ds still active</string>
    <string name="dialog_rdy_timeExpired">Expired</string>
    <string name="notification_track_title">Tracking your location</string>
    <string name="notification_track_info">While you are on your way to an emergency, your location is transmitted to the control center.</string>
    <string name="emergency_received">Emergency received!</string>
    <string name="emergency_distance_in_m">Emergency in %1$dm</string>
    <string name="emergency_distance">%1$.1f km away</string>
    <string name="emergency_distancedialog">%1$.1f km</string>
    <string name="emergency_durationdialog" translatable="false">%1$d min</string>
    <string name="emergency_active">Emergency mission active!</string>
    <string name="emergency_distance_no_gps">Activate GPS to determine distance.</string>
    <string name="emergency_expired_message1">You received an emergency  %1$d minutes ago.</string>
    <string name="emergency_expired_message2">Unfortunately you have not responded to this emergency within %1$d minutes. The emergency has expired for you.</string>
    <string name="title_activity_information_item_tab">News</string>
    <string name="news_tab_news">News</string>
    <string name="news_tab_events">Events</string>
    <string name="continue_reading">Continue reading</string>
    <string name="name" translatable="false">Name</string>
    <string name="search_for_place">Search for address</string>
    <string name="hint_street">Street</string>
    <string name="hint_plz" translatable="false">PLZ</string>
    <string name="hint_city">City</string>
    <string name="hint_desc">Description</string>
    <string name="hint_title" translatable="false">Title</string>
    <string name="photo">Photos</string>
    <string name="upload_photo">Take a photo</string>
    <string name="create_defi_info_title">Info</string>
    <string name="create_defi_info">Only activated first responders are allowed to add new AEDs.</string>
    <string name="create_defi_info_register">Register</string>
    <string name="create_defi_info_status">Go to status</string>
    <string name="action_settings">Settings</string>
    <string name="help_us">Help us!</string>
    <string name="pin_input">Set Pin</string>
    <string name="pin_input_description_1">The PIN must be 6 digits long</string>
    <string name="pin_input_description_2">The PIN protects the app from unauthorized usage.</string>
    <string name="pin_dialog">PIN-Code Abfrage</string>
    <string name="certificate_settings">Certificate</string>
    <string name="agreement_settings">Agreement</string>
    <string name="agreement_notsigned_settings">Not signed</string>
    <string name="agreement_signed_settings">Signed</string>
    <string name="agreement_sub_settings">Edit Sub Agreements</string>
    <string name="agreement_dialog_notloaded_msg">Error loading basic agreement. Please check your internet connection.</string>
    <string name="agreement_dialog_info">The signed basis agreement entitles you to be active as a first responder in many regions of Germany and offer you insurance during your mission.</string>
    <string name="agreement_dialog_info_sub">Sub Agreements are required due to different federal and provincial legislations. With your signature, you unlock additional regions while maintaining the same insurance cover. We encourage you to sign all available agreements.</string>
    <string name="agreement_dialog_info_title">Why Basis Agreement?</string>
    <string name="agreement_dialog_info_title_sub">Why Sub Agreement?</string>
    <string name="sub_agreement">Sub Agreements</string>
    <string name="agreement_sub_signed">Signed on %1$s.</string>
    <string name="check">Check</string>
    <string name="skip">Skip</string>
    <string name="are_you_available">Are you ready to accept the emergency?</string>
    <string name="ready">Ich bin bereit!</string>
    <string name="thanks_for_your_help">Thanks for your help</string>
    <string name="unknown">Unknown</string>
    <string name="registration_successful">Registration successful completed</string>
    <string name="email_verification_title">email verification</string>
    <string name="email_verification_hint1">Please confirm your email address.</string>
    <string name="email_verification_hint2">You can also do this step later.</string>
    <string name="incomplete_protocol_saved">Your incomplete report was saved. You can reopen it from the start page</string>
    <string name="back_to_homescreen">Back to the homescreen</string>
    <string name="continue_filling_report">Continue filling out the report</string>
    <string name="protocol_sucessfully_sent">The emergency report was successfully sent</string>
    <string name="thank_you_for_the_collaboration">Many thanks for your support!</string>
    <string name="why_have_you_finished_the_emergency">Why do you want to finish the emergency?</string>
    <string name="button_cancel_emergency">Cancel emergency</string>
    <string name="button_patient_reached">Patient reached</string>
    <string name="activity_emergenc_finished_text">Because you accepted the emergency call, you have to fill out an emergency report.</string>
    <string name="button_report">Fill report</string>
    <string name="button_report_later">Fill report later</string>
    <string name="spontaneous_helper_notification">Spontaneous Helper Notification</string>
    <string name="spontaneous_helper_info">As a spontaneous helper you voluntarily support aid organisations in difficult times by carrying out certain tasks.</string>
    <string name="i_would_like_to_get_notified">I would like to be notified for the following tasks:</string>
    <string name="elderly_care">Elderly care</string>
    <string name="support_for_ambulance_service">Support for ambulance service</string>
    <string name="physically_difficult_task">Physically difficult task</string>
    <string name="general_spontaneous_assistance">General spontaneous assistance</string>
    <string name="elderly_care_eg">e.g. shopping service, accompaniment to the doctor</string>
    <string name="support_for_ambulance_service_eg">e.g. provision of material, registration and care of uninjured persons, drivers</string>
    <string name="physically_difficult_task_eg">e.g. towing sandbags or boxes</string>
    <string name="general_spontaneous_assistance_eg">e.g. food banks, food delivery</string>
</resources>