<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.f_login_register.EmailVerificationActivity">

    <LinearLayout
        android:id="@+id/focusLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_v2"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/registration_successful"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorAccentLine" />
        </LinearLayout>
        <Space style="@style/MSR_Space_Linear" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/view_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_verification_title"
                android:textStyle="bold" />

            <Space style="@style/MSR_Space_Linear" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_verification_hint1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_verification_hint2" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCheckMail"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_button"
                    android:textColor="@color/icons"
                    android:text="@string/check"
                    android:onClick="checkByEmailClient"/>


                <Space style="@style/MSR_Space_Linear" />

                <TextView
                    android:id="@+id/buttonFinished"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready"
                    android:textColor="@color/colorGreenDark"
                    android:onClick="finishAfterVerifiedActivity"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/buttonSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:onClick="finishActivity"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>