<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.protocols.ProtocolFinishedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_action_done"
            android:tint="@color/colorDarkGrey"
            android:contentDescription="@string/app_name" />

        <Space style="@style/MSR_Space_Linear" />
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_sucessfully_sent"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <Space style="@style/MSR_Space_Linear" />
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_the_collaboration"
            android:gravity="center"/>
        <Space style="@style/MSR_Space_Linear" />



        <Space style="@style/MSR_Space_Linear" />

        <TextView
            style="@style/MSR_TextView_White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_available" />



        <Space style="@style/MSR_Space_Linear" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:textAllCaps="false"
                android:textSize="@dimen/text_button"
                android:textColor="@color/icons"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/back_to_homescreen"
                android:onClick="finishActivity"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>