<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/focusLayout"
    style="@style/Layout_Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10pt"
    tools:context=".view.protocols.ProtocolActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incomplete_protocol_saved"
        android:gravity="center"
        android:layout_margin="10pt"
        android:textColor="@color/icons">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/text_button"
        android:text="@string/continue_filling_report"
        android:layout_marginBottom="10dp"
        android:background="@drawable/msr_button_outline"
        android:textColor="@color/icons"
        android:onClick="closeAlert"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/text_button"
        android:text="@string/back_to_homescreen"
        android:background="@drawable/msr_button_outline"
        android:textColor="@color/icons"
        android:onClick="finishActivity"/>
</LinearLayout>
